# neural_network

./: .gitignore  CMakeLists.txt  README.md  cpp-matrix.cbp  cpp-matrix.depend  cpp-matrix.layout  func.cpp  func.hpp  idx_format.hpp  main.cpp  matrix.hpp  matrix.tpp  neural_network.cpp  neural_network.hpp  random.hpp  random.tpp  utils.cpp  utils.hpp
include/: func.hpp  idx_format.hpp  matrix.tpp  neural_network.hpp  random.tpp  utils.hpp
src/: func.cpp  main.cpp  neural_network.cpp  utils.cpp
